# OpticDiscLocalization

./: .gitignore  .gitmodules  Makefile  config_example.yaml  pyproject.toml
.github/workflows/: codestyle.yml
backend/: main.py
client/: main.py
experiments/vggregressor/exp1/: config.yaml
notebooks/: results.ipynb  vggregressor_test.ipynb
src/: config.py  dataset.py  download.py  evaluate.py  metrics.py  process.py  run.py  transforms.py
src/data/: __init__.py  download.py  process.py
src/exp_runner/: __init__.py  config.py  runner.py
src/ssd/: __init__.py  dataset.py  pipeline.py
src/vggregressor/: __init__.py  dataset.py  model.py  pipeline.py  transforms.py
