[tool.poetry]
name = "diplomaworkproject"
version = "0.1.0"
description = ""
authors = ["Drapeyko Nikita <drapeykonik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
torch = "^2.0.0"
torchvision = "^0.15.1"
pdoc3 = "^0.10.0"
joblib = "^1.2.0"
interrogate = "^1.5.0"
notebook = "^6.5.4"
progressbar = "^2.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
